2008-11-05  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/volume/gstvolume.c: (volume_update_real_volume),
	(gst_volume_set_volume), (gst_volume_get_volume),
	(gst_volume_set_mute), (gst_volume_init), (volume_setup),
	(volume_transform_ip), (volume_update_mute),
	(volume_update_volume), (volume_get_property):
	* gst/volume/gstvolume.h:
	Keep negotiated state in a separate variable.
	Protect the volume and mute properties with the object lock.
	Protect modifying the transform with the transform lock.

2008-11-05  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/ffmpegcolorspace/gstffmpegcodecmap.c:
	(gst_ffmpeg_pixfmt_to_caps):
	Only convert caps to string when debug is enabled.

2008-11-04  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/theora/gsttheoradec.h:
	* ext/theora/theoradec.c: (gst_theora_dec_init),
	(gst_theora_dec_reset), (theora_dec_src_event),
	(theora_dec_sink_event), (theora_handle_type_packet):
	Copy seqnum.
	Keep events in a pending list, like vorbisdec, instead of trying
	to construct a segment event ourselves.

	* ext/vorbis/vorbisdec.c: (gst_vorbis_dec_reset),
	(vorbis_dec_src_event), (vorbis_dec_sink_event):
	* ext/vorbis/vorbisdec.h:
	Copy seqnum.

2008-11-04  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_submit_packet),
	(gst_ogg_demux_deactivate_current_chain),
	(gst_ogg_demux_perform_seek), (gst_ogg_demux_handle_page),
	(gst_ogg_demux_loop):
	* ext/ogg/gstoggdemux.h:
	Copy seqnums around to track playback segments and messages.

2008-11-03  Wim Taymans  <wim.taymans@collabora.co.uk>

	Based on patch by: Matthias Kretz <kretz at kde dot org>

	* ext/alsa/gstalsasink.c: (gst_alsasink_open),
	(gst_alsasink_prepare), (gst_alsasink_unprepare),
	(gst_alsasink_write):
	Make all access non-blocking so that we can better handle unplugging
	of usb devices. Fixes #559111

2008-11-03  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Damien Lespiau  <damien.lespiau gmail com>
